--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                 </div>
 
                 <div class="project">
-                    <img src="./images/portfolio.png" title="portfolio website" id="calorie">
+                    <img src="./images/portfolioo.png" title="portfolio website" id="calorie">
                     <div>
                         <div id="div1">
                             <h2>Portfolio Website</h2>
                             <div id="div2">
-                                <a href="https://mun-eerah.github.io/calorie-counter-app/" target="_blank"><i
+                                <a href="https://mun-eerah.github.io/portfolio-website/" target="_blank"><i
                                         class="fa-solid fa-circle-up project-icon" id="project-icon-arrow" aria-hidden="true"></i></a>
                                 <a href="https://github.com/Mun-eerah" target="_blank"><i class="fab fa-github project-icon"
                                         aria-hidden="true"></i></a>
