--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                             </div>
                         </div>
                         <div id="div3">
-                            <p>This is the very platform you're viewing! My personal website, designed and built from the ground up using HTML,
-                            Tailwind CSS, and JavaScript. It serves as a direct demonstration of my frontend development expertise, showcasing my
+                            <p>This is the very platform you're viewing! My personal website, designed and built from the ground up using HTML, CSS3, and JavaScript. It serves as a direct demonstration of my frontend development expertise, showcasing my
                             projects, skills, and professional journey in a responsive and intuitive interface.
                             </p>
                             <ul class="div3-ul">
