--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             user experiences.</h2>
             </header>
 
-            <div id="muni-div"><img src="./images/muni-in-suit.png" title="Munira Ajumobi" id="muni"></div>
+            <div id="muni-div"><img src="./images/mypic-white-hijab.png" title="Munira Ajumobi" id="muni"></div>
+            <!-- <div id="muni-div"><img src="./images/muni-in-suit.png" title="Munira Ajumobi" id="muni"></div> -->
         </div>
 
         <section id="work">
