still on layout

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             </header>
 
             <div id="muni-div"><img src="./images/mypic-white-hijab.png" title="Munira Ajumobi" id="muni"></div>
-            <!-- <div id="muni-div"><img src="./images/muni-in-suit.png" title="Munira Ajumobi" id="muni"></div> -->
         </div>
 
         <section id="work">
@@ -98,7 +97,7 @@
                 </div>
 
                 <div class="project">
-                    <img src="./images/portfolioo.png" title="portfolio website" id="calorie">
+                    <img src="./images/new_portfolio-pic.png" title="portfolio website" id="calorie">
                     <div>
                         <div id="div1">
                             <h2>Portfolio Website</h2>
